attempt to fix whitespace for counter

--- a/style.css
+++ b/style.css
@@ -79,3 +79,6 @@ body {
     background-color: #8b2635;
 }
 
+#counter {
+    margin-left: 0.1em;
+}
